adaptive auth page/ fixed bag with overflow

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,6 +1,6 @@
 
 
-$main:rgb(6, 126, 255);
+$main:rgb(83, 157, 236);
 $second:rgb(68, 134, 255);
 
 
@@ -19,6 +19,7 @@ $second-content: rgb(170,170,170);
 
 $hover: #94949419;
 
+$body-color: rgb(17, 17, 17);
 
 $content-main-l:  rgb(255, 255, 255);
 $content-main-dark-l: rgb(255, 255, 255);
